src/test/deca/context/invalid/declare-void.deca
// Description:
//    Declare void variable
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : The variable's type can't be void (rule 3.17)
//
// Historique:
//    cree le 06/01/2023

{
    void i;
}